--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@next/font": "13.2.3",
     "@reduxjs/toolkit": "^1.9.3",
     "framer-motion": "^10.0.1",
+    "fs": "^0.0.1-security",
+    "js-cookie": "^3.0.1",
+    "net": "^1.0.2",
     "next": "13.2.3",
+    "razorpay": "^2.8.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
+    "tls": "^0.0.1",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
